<resources>
    <string name="app_name">Curriculum</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="view_welcome">Welcome</string>
    <string name="view_Signup">Sign up</string>
    <string name="mail_hint">E-mail address</string>
    <string name="pass_hint">Password</string>
    <string name="login">Login</string>
    <string name="rePassword">Re-enter password</string>
    <string name="id">Name</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_up">Sign up</string>
    <string name="logout">Logout</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>