<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bkcolor"
    tools:context=".Login_Sys.RegisterActivity">

    <TextView
        android:id="@+id/textbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/RegisterPage"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/view_Signup"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/white" />

    <RelativeLayout
        android:id="@+id/RegisterPage"
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:layout_centerInParent="true"
        android:elevation="20dp"
        android:background="#ffffff"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/email"
            android:ems="10"
            android:hint="@string/id"
            android:inputType="text" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/password"
            android:ems="10"
            android:hint="@string/mail_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rePassword"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/pass_hint"
            android:inputType="numberPassword"/>

        <EditText
            android:id="@+id/rePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ems="10"
            android:hint="@string/rePassword"
            android:inputType="numberPassword"/>

        <Button
            android:id="@+id/btn"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/rePassword"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/login"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_below="@id/btn"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/login" />
    </RelativeLayout>



</RelativeLayout>